--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome to My Website</h1>
     <p>This is a personal website hosted on GitHub Pages.</p>
+    <p>HIHIHIHIHIHIHI</p>
+    <p>HIHIHIHIHIHIHI</p>
 </body>
 </html>
