--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Welcome to My Website</h1>
     <p>This is a personal website hosted on GitHub Pages.</p>
     <p>HIHIHIHIHIHIHI</p>
-    <p>HIHIHIHIHIHIHI</p>
+    <p>I AM JAKE AND I LIKE STEAM FISH</p>
 </body>
 </html>
