--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>This is a personal website hosted on GitHub Pages.</p>
     <p>HIHIHIHIHIHIHI</p>
     <p>I AM JAKE AND I LIKE STEAM FISH</p>
+    <img src="fish.jpeg" alt="Fish">
 </body>
 </html>
