--- a/index.html
+++ b/index.html
@@ -3,13 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>Jake Pong | Electrical Engineering Student</title>
+    <link rel="stylesheet" href="styles.css"> <!-- link to CSS file -->
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a personal website hosted on GitHub Pages.</p>
-    <p>HIHIHIHIHIHIHI</p>
-    <p>I AM JAKE AND I LIKE STEAM FISH</p>
-    <img src="fish.jpeg" alt="Fish">
+    <header>
+        <h1>Jake Pong</h1>
+        <p>Short description or tagline (e.g., Machine Learning Engineer)</p>
+    </header>
+    
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#research">Research</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I AM JAKE AND I LIKE STEAM FISH</p>
+        <img src="fish.jpeg" alt="Fish">
+    </section>
+
+    <section id="research">
+        <h2>Research Interests</h2>
+        <p>Details about your research areas, projects, and contributions.</p>
+    </section>
+
+    <section id="publications">
+        <h2>Publications</h2>
+        <ul>
+            <li>Paper 1: Title, Journal, Year</li>
+            <li>Paper 2: Title, Journal, Year</li>
+            <!-- Add more publications as needed -->
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: your.email@example.com</p>
+        <p>LinkedIn, GitHub, etc.</p>
+    </section>
+
+    <footer>
+        <p>© 2024 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
